# substrate-raft-setup

./: Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml
docker/: Dockerfile  build.sh  substrate_builder.Dockerfile
node/: Cargo.toml
node/src/: cli.rs  service.rs
permission_resolver/: Cargo.toml
permission_resolver/src/: cache.rs  lib.rs  metrics.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
