[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

sp-authority-permission = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-cli = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", features = ["wasmtime"] , branch = "feat/remove-remote-permission-resolver" }
sp-core = { version = "6.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-executor = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", features = ["wasmtime"] , branch = "feat/remove-remote-permission-resolver" }
sc-service = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", features = ["wasmtime"] , branch = "feat/remove-remote-permission-resolver" }
sc-telemetry = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-keystore = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-transaction-pool = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-consensus-aura = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-consensus-aura = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-consensus = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-consensus = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-client-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-runtime = { version = "6.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-timestamp = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-inherents = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-keyring = { version = "6.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
frame-system = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-rpc-api = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-blockchain = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sp-block-builder = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
sc-basic-authorship = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }

# Local Dependencies
node-template-runtime = { version = "4.0.0-dev", path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }

[features]
default = []
runtime-benchmarks = ["node-template-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-template-runtime/try-runtime", "try-runtime-cli"]
