[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

sp-authority-permission = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-cli = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", features = ["wasmtime"] , branch = "raft-validators-dev" }
sp-core = { version = "6.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-executor = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", features = ["wasmtime"] , branch = "raft-validators-dev" }
sc-service = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", features = ["wasmtime"] , branch = "raft-validators-dev" }
sc-telemetry = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-keystore = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-transaction-pool = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-consensus-aura = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-consensus-aura = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-consensus = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-consensus = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-consensus-slots = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-client-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-runtime = { version = "6.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-timestamp = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-inherents = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-keyring = { version = "6.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
frame-system = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-rpc-api = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-blockchain = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sp-block-builder = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
sc-basic-authorship = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }

# Local Dependencies
node-template-runtime = { version = "4.0.0-dev", path = "../runtime" }
permission-resolver = { version = "0.1.0", path = "../permission_resolver" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }

async-trait = "0.1.57"
tikv-client = "0.1.0"
log = { version = "0.4.17", default-features = false }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }
thiserror = "1.0"

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "raft-validators-dev" }

[features]
default = []
runtime-benchmarks = ["node-template-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-template-runtime/try-runtime", "try-runtime-cli"]
