[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }

sp-authority-permission = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-cli = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git", features = ["wasmtime"]  }
sp-core = { version = "6.0.0", git = "https://github.com/bright/substrate-raft.git" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git", features = ["wasmtime"]  }
sc-service = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git", features = ["wasmtime"]  }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sp-runtime = { version = "6.0.0", git = "https://github.com/bright/substrate-raft.git" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
sp-keyring = { version = "6.0.0", git = "https://github.com/bright/substrate-raft.git" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/bright/substrate-raft.git" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.1", features = ["server"] }
sc-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
sp-api = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
sc-rpc-api = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
sp-blockchain = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
sp-block-builder = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
sc-basic-authorship = { version = "0.10.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/cli-conf-2" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/bright/substrate-raft.git" }

# Local Dependencies
node-template-runtime = { version = "4.0.0-dev", path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/bright/substrate-raft.git" }

async-trait = "0.1.57"
tikv-client = "0.1.0"
log = { version = "0.4.17", default-features = false }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", git = "https://github.com/bright/substrate-raft.git" }
thiserror = "1.0"
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "ssh://git@github.com/bright/substrate-priv.git", branch = "feat/remove-remote-permission-resolver" }
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/bright/substrate-raft.git" }

[features]
default = []
runtime-benchmarks = ["node-template-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-template-runtime/try-runtime", "try-runtime-cli"]
